{
  "version": 4,
  "terraform_version": "1.6.4",
  "serial": 424,
  "lineage": "af431786-7dcd-d63e-cd6c-38bc06256a9b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "my_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d2dbc1cbe1ea692e",
            "domain": "vpc",
            "id": "eipalloc-0d2dbc1cbe1ea692e",
            "network_border_group": "ap-southeast-1",
            "public_dns": "ec2-3-1-190-225.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "3.1.190.225",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "my_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-02453f5468b897e31",
            "arn": "arn:aws:ec2:ap-southeast-1:255945442255:instance/i-021f60a2004681ca3",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-021f60a2004681ca3",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "jl",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0217eb8d3d46c1528",
            "private_dns": "ip-10-0-1-152.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.152",
            "public_dns": "ec2-13-212-11-95.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "13.212.11.95",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0318aa12fca3d8195",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02f6475d6ddd298d0",
            "tags": {
              "Name": "jinnliong-ec2"
            },
            "tags_all": {
              "Name": "jinnliong-ec2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e01d17c93d8beb4a"
            ]
          },
          "dependencies": [
            "aws_security_group.instance_sg",
            "aws_subnet.public_subnet_1a",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "my_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:255945442255:internet-gateway/igw-0686ce7953db889f3",
            "id": "igw-0686ce7953db889f3",
            "owner_id": "255945442255",
            "tags": {
              "Name": "jinnliong-igw"
            },
            "tags_all": {
              "Name": "jinnliong-igw"
            },
            "vpc_id": "vpc-0ebc9d6abf3246e3e"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "my_ngw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d2dbc1cbe1ea692e",
            "association_id": "eipassoc-050b71ecc2eae786c",
            "connectivity_type": "public",
            "id": "nat-00da10cd11d2c73a5",
            "network_interface_id": "eni-0691118a1cb502997",
            "private_ip": "10.0.4.136",
            "public_ip": "3.1.190.225",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0c5615a78d685e5fd",
            "tags": {
              "Name": "jinnliong-ngw"
            },
            "tags_all": {
              "Name": "jinnliong-ngw"
            }
          },
          "dependencies": [
            "aws_eip.my_eip",
            "aws_subnet.private_subnet_1a",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0d7be0d4bf41ad0271080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-00da10cd11d2c73a5",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0d7be0d4bf41ad027",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.my_eip",
            "aws_nat_gateway.my_ngw",
            "aws_route_table.private_route_table",
            "aws_subnet.private_subnet_1a",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0686ce7953db889f3",
            "id": "r-rtb-0137afd0b2ec4aced1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0137afd0b2ec4aced",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.my_igw",
            "aws_route_table.public_route_table",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "db_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:255945442255:route-table/rtb-0d5251b8f50cc30c2",
            "id": "rtb-0d5251b8f50cc30c2",
            "owner_id": "255945442255",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "jinnliong-db-rt"
            },
            "tags_all": {
              "Name": "jinnliong-db-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ebc9d6abf3246e3e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:255945442255:route-table/rtb-0d7be0d4bf41ad027",
            "id": "rtb-0d7be0d4bf41ad027",
            "owner_id": "255945442255",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "jinnliong-private-rt"
            },
            "tags_all": {
              "Name": "jinnliong-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ebc9d6abf3246e3e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:255945442255:route-table/rtb-0137afd0b2ec4aced",
            "id": "rtb-0137afd0b2ec4aced",
            "owner_id": "255945442255",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "jinnliong-public-rt"
            },
            "tags_all": {
              "Name": "jinnliong-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ebc9d6abf3246e3e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "db_rt_association_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01e6b8797b4ee62da",
            "route_table_id": "rtb-0d5251b8f50cc30c2",
            "subnet_id": "subnet-0a14e91829dfb65f4"
          },
          "dependencies": [
            "aws_route_table.db_route_table",
            "aws_subnet.db_subnet_1a",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "db_rt_association_1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0142f9b773a256d8f",
            "route_table_id": "rtb-0d5251b8f50cc30c2",
            "subnet_id": "subnet-0642e386008a8bde5"
          },
          "dependencies": [
            "aws_route_table.db_route_table",
            "aws_subnet.db_subnet_1b",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "db_rt_association_1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0af0419893a9d9363",
            "route_table_id": "rtb-0d5251b8f50cc30c2",
            "subnet_id": "subnet-064eb9753a254cf6a"
          },
          "dependencies": [
            "aws_route_table.db_route_table",
            "aws_subnet.db_subnet_1c",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_rt_association_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01d8405b241a72ffc",
            "route_table_id": "rtb-0d7be0d4bf41ad027",
            "subnet_id": "subnet-0c5615a78d685e5fd"
          },
          "dependencies": [
            "aws_route_table.private_route_table",
            "aws_subnet.private_subnet_1a",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_rt_association_1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a841cd583682c94f",
            "route_table_id": "rtb-0d7be0d4bf41ad027",
            "subnet_id": "subnet-0fbe6ed8e426eae68"
          },
          "dependencies": [
            "aws_route_table.private_route_table",
            "aws_subnet.private_subnet_1b",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_rt_association_1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07b0dc589321ac8ca",
            "route_table_id": "rtb-0d7be0d4bf41ad027",
            "subnet_id": "subnet-0349dbc774d45f1f4"
          },
          "dependencies": [
            "aws_route_table.private_route_table",
            "aws_subnet.private_subnet_1c",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rt_association_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0893d30da1df37b0e",
            "route_table_id": "rtb-0137afd0b2ec4aced",
            "subnet_id": "subnet-02f6475d6ddd298d0"
          },
          "dependencies": [
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnet_1a",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rt_association_1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00a78894e64fc8bbc",
            "route_table_id": "rtb-0137afd0b2ec4aced",
            "subnet_id": "subnet-0d455f7857c45641f"
          },
          "dependencies": [
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnet_1b",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rt_association_1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cbb770fc48a16268",
            "route_table_id": "rtb-0137afd0b2ec4aced",
            "subnet_id": "subnet-00986c61ea4efd13c"
          },
          "dependencies": [
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnet_1c",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "instance_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:255945442255:security-group/sg-0e01d17c93d8beb4a",
            "description": "Security Group To Allow SSH from my IP range(s)",
            "egress": [],
            "id": "sg-0e01d17c93d8beb4a",
            "ingress": [
              {
                "cidr_blocks": [
                  "202.166.159.65/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20231125172852644900000001",
            "name_prefix": "terraform-",
            "owner_id": "255945442255",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "jinnliongSSHSecurityGroup"
            },
            "tags_all": {
              "Name": "jinnliongSSHSecurityGroup"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ebc9d6abf3246e3e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "db_subnet_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:255945442255:subnet/subnet-0a14e91829dfb65f4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.7.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a14e91829dfb65f4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "255945442255",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "jinnliong-db-1a"
            },
            "tags_all": {
              "Name": "jinnliong-db-1a"
            },
            "vpc_id": "vpc-0ebc9d6abf3246e3e"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "db_subnet_1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:255945442255:subnet/subnet-0642e386008a8bde5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.8.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0642e386008a8bde5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "255945442255",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "jinnliong-db-1b"
            },
            "tags_all": {
              "Name": "jinnliong-db-1b"
            },
            "vpc_id": "vpc-0ebc9d6abf3246e3e"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "db_subnet_1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:255945442255:subnet/subnet-064eb9753a254cf6a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1c",
            "availability_zone_id": "apse1-az3",
            "cidr_block": "10.0.9.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-064eb9753a254cf6a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "255945442255",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "jinnliong-db-1c"
            },
            "tags_all": {
              "Name": "jinnliong-db-1c"
            },
            "vpc_id": "vpc-0ebc9d6abf3246e3e"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:255945442255:subnet/subnet-0c5615a78d685e5fd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c5615a78d685e5fd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "255945442255",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "jinnliong-private-1a"
            },
            "tags_all": {
              "Name": "jinnliong-private-1a"
            },
            "vpc_id": "vpc-0ebc9d6abf3246e3e"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:255945442255:subnet/subnet-0fbe6ed8e426eae68",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fbe6ed8e426eae68",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "255945442255",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "jinnliong-private-1b"
            },
            "tags_all": {
              "Name": "jinnliong-private-1b"
            },
            "vpc_id": "vpc-0ebc9d6abf3246e3e"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:255945442255:subnet/subnet-0349dbc774d45f1f4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1c",
            "availability_zone_id": "apse1-az3",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0349dbc774d45f1f4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "255945442255",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "jinnliong-private-1c"
            },
            "tags_all": {
              "Name": "jinnliong-private-1c"
            },
            "vpc_id": "vpc-0ebc9d6abf3246e3e"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:255945442255:subnet/subnet-02f6475d6ddd298d0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02f6475d6ddd298d0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "255945442255",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "jinnliong-public-1a"
            },
            "tags_all": {
              "Name": "jinnliong-public-1a"
            },
            "vpc_id": "vpc-0ebc9d6abf3246e3e"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:255945442255:subnet/subnet-0d455f7857c45641f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d455f7857c45641f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "255945442255",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "jinnliong-public-1b"
            },
            "tags_all": {
              "Name": "jinnliong-public-1b"
            },
            "vpc_id": "vpc-0ebc9d6abf3246e3e"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:255945442255:subnet/subnet-00986c61ea4efd13c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1c",
            "availability_zone_id": "apse1-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00986c61ea4efd13c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "255945442255",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "jinnliong-public-1c"
            },
            "tags_all": {
              "Name": "jinnliong-public-1c"
            },
            "vpc_id": "vpc-0ebc9d6abf3246e3e"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:255945442255:vpc/vpc-0ebc9d6abf3246e3e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0453663f33d484e4c",
            "default_route_table_id": "rtb-01b0627c5048f66f8",
            "default_security_group_id": "sg-08b889c413bbcc7c8",
            "dhcp_options_id": "dopt-0518257e7521e7f28",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ebc9d6abf3246e3e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-01b0627c5048f66f8",
            "owner_id": "255945442255",
            "tags": {
              "Name": "jinnliong-vpc"
            },
            "tags_all": {
              "Name": "jinnliong-vpc"
            }
          }
        }
      ]
    }
  ]
}